k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: isaakstory
spec:
  selector:
    app: isaakstory
  ports:
    - port: 8000
