k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isaakstory
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: isaakstory.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: isaakstory
                port:
                  number: 8000
  tls:
    - hosts:
        - isaakstory.org
      secretName: isaakstory-cert
